Add comments from benchmark blog

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1151,6 +1151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Establish a connection to the STAC API\n",
     "import planetary_computer as pc\n",
     "from pystac_client import Client\n",
     "\n",
@@ -1215,9 +1216,18 @@
     }
    ],
    "source": [
+    "# get our bounding box to search latitude and longitude coordinates\n",
     "def get_bounding_box(latitute, longitude, meter_buffer=50000):\n",
+    "    \"\"\"\n",
+    "    Given a latitude, longitude, and buffer in meters, returns a bounding\n",
+    "    box around the point with the buffer on the left, right, top, and bottom.\n",
+    "\n",
+    "    Returns a list of [minx, miny, maxx, maxy]\n",
+    "    \"\"\"\n",
     "    distance_search = distance.distance(meters=meter_buffer)\n",
     "    \n",
+    "    # calculate the lat/long bounds based on ground distance\n",
+    "    # bearings are cardinal directions to move (south, west, north, and east)   \n",
     "    min_lat = distance_search.destination(point=(latitute, longitude), bearing=180).latitude\n",
     "    min_long = distance_search.destination(point=(latitute, longitude), bearing=270).longitude\n",
     "    max_lat = distance_search.destination(point=(latitute, longitude), bearing=0).latitude\n",
@@ -1246,14 +1256,19 @@
     }
    ],
    "source": [
+    "# get our date range to search, and format correctly for query\n",
     "def get_date_range(date, time_buffer_days=15):\n",
-    "    \n",
-    "    datetime_format = '%Y-%m-%d'\n",
+    "    \"\"\"Get a date range to search for in the planetary computer based\n",
+    "    on a sample's date. The time range will include the sample date\n",
+    "    and time_buffer_days days prior\n",
+    "\n",
+    "    Returns a string\"\"\"\n",
+    "    datetime_format = \"%Y-%m-%dT\"\n",
     "    range_start = pd.to_datetime(date) - timedelta(days=time_buffer_days)\n",
-    "    #date_range = f\"{range_start.strftime(datetime_format)}T00:00:00Z/{pd.to_datetime(date).strftime(datetime_format)}T00:00:00Z\"\n",
     "    date_range = f\"{range_start.strftime(datetime_format)}/{pd.to_datetime(date).strftime(datetime_format)}\"\n",
     "\n",
     "    return date_range\n",
+    "\n",
     "\n",
     "date_range = get_date_range(example_row.date)\n",
     "date_range"
@@ -1276,12 +1291,14 @@
     }
    ],
    "source": [
+    "# search the planetary computer sentinel-l2a and landsat level-2 collections\n",
     "search = catalog.search(\n",
     "    collections=[\"sentinel-2-l2a\", \"landsat-c2-l2\"],\n",
     "    bbox=bbox,\n",
     "    datetime=date_range\n",
     ")\n",
     "\n",
+    "# see how many items were returned\n",
     "items = [item for item in search.get_all_items()]\n",
     "len(items)"
    ]
@@ -1292,6 +1309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get details of all of the items returned\n",
     "item_details = pd.DataFrame(\n",
     "    [\n",
     "        {\n",
@@ -1315,6 +1333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check which rows actually contain the sample location\n",
     "item_details['contains_sample_point'] = (\n",
     "    (item_details.min_lat < example_row.latitude)\n",
     "    & (example_row.latitude < item_details.max_lat)\n",
@@ -1548,6 +1567,7 @@
     }
    ],
    "source": [
+    "# 1 - filter to sentinel\n",
     "item_details[item_details.platform.str.contains('Sentinel')]"
    ]
   },
@@ -1577,6 +1597,7 @@
     }
    ],
    "source": [
+    "# 2 - take closest by date\n",
     "best_item = (\n",
     "    item_details[item_details.platform.str.contains('Sentinel')]\n",
     "    .sort_values(by='datetime', ascending=False)\n",
@@ -1631,6 +1652,7 @@
     }
    ],
    "source": [
+    "# What assets are available?\n",
     "for asset_key, asset in item.assets.items():\n",
     "    print(f\"{asset_key:<25} - {asset.title}\")"
    ]
@@ -1677,16 +1699,23 @@
    "outputs": [],
    "source": [
     "def crop_sentinel_image(item, bounding_box):\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Given a STAC item from Sentinel-2 and a bounding box tuple in the format\n",
+    "    (minx, miny, maxx, maxy), return a cropped portion of the item's visual\n",
+    "    imagery in the bounding box.\n",
+    "\n",
+    "    Returns the image as a numpy array with dimensions (color band, height, width)\n",
+    "    \"\"\"\n",
     "    (minx, miny, maxx, maxy) = bounding_box\n",
-    "    \n",
-    "    image = rioxarray.open_rasterio(pc.sign(item.assets['visual'].href)).rio.clip_box(\n",
+    "\n",
+    "    image = rioxarray.open_rasterio(pc.sign(item.assets[\"visual\"].href)).rio.clip_box(\n",
     "        minx=minx,\n",
     "        miny=miny,\n",
     "        maxx=maxx,\n",
     "        maxy=maxy,\n",
-    "        crs='EPSG:4326'\n",
+    "        crs=\"EPSG:4326\",\n",
     "    )\n",
+    "\n",
     "    return image.to_numpy()"
    ]
   },
@@ -1713,14 +1742,16 @@
     }
    ],
    "source": [
+    "# get a smaller geographic bounding box\n",
     "minx, miny, maxx, maxy = get_bounding_box(\n",
     "    example_row.latitude, example_row.longitude, meter_buffer=3000\n",
     ")\n",
     "\n",
+    "# get the zoomed in image array\n",
     "bbox = (minx, miny, maxx, maxy)\n",
-    "zoomed_image = crop_sentinel_image(item, bbox)\n",
+    "zoomed_img_array = crop_sentinel_image(item, bbox)\n",
     "\n",
-    "zoomed_image[0]"
+    "zoomed_img_array[0]"
    ]
   },
   {
@@ -1750,7 +1781,9 @@
     }
    ],
    "source": [
-    "plt.imshow(np.transpose(zoomed_image, axes=[1, 2, 0]))"
+    "# we have to transpose some of the dimensions to plot\n",
+    "# matplotlib expects channels in a certain order\n",
+    "plt.imshow(np.transpose(zoomed_img_array, axes=[1, 2, 0]))"
    ]
   },
   {
@@ -1812,19 +1845,23 @@
    "outputs": [],
    "source": [
     "def crop_landsat_image(item, bounding_box):\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Given a STAC item from Landsat and a bounding box tuple in the format\n",
+    "    (minx, miny, maxx, maxy), return a cropped portion of the item's visual\n",
+    "    imagery in the bounding box.\n",
+    "\n",
+    "    Returns the image as a numpy array with dimensions (color band, height, width)\n",
+    "    \"\"\"\n",
     "    (minx, miny, maxx, maxy) = bounding_box\n",
-    "    \n",
+    "\n",
     "    image = odc.stac.stac_load(\n",
-    "        [pc.sign(item)],\n",
-    "        bands=['red', 'green', 'blue'],\n",
-    "        bbox=[minx, miny, maxx, maxy],\n",
+    "        [pc.sign(item)], bands=[\"red\", \"green\", \"blue\"], bbox=[minx, miny, maxx, maxy]\n",
     "    ).isel(time=0)\n",
-    "    \n",
-    "    image_array = image[['red', 'green', 'blue']].to_array().to_numpy()\n",
-    "    \n",
+    "    image_array = image[[\"red\", \"green\", \"blue\"]].to_array().to_numpy()\n",
+    "\n",
+    "    # normalize to 0 - 255 values\n",
     "    image_array = cv2.normalize(image_array, None, 0, 255, cv2.NORM_MINMAX)\n",
-    "    \n",
+    "\n",
     "    return image_array"
    ]
   },
@@ -1853,6 +1890,7 @@
    "source": [
     "item = landsat_item.item_obj\n",
     "\n",
+    "# we'll use the same cropped area as above\n",
     "landsat_image_array = crop_landsat_image(item, bbox)\n",
     "landsat_image_array[0]"
    ]
@@ -1915,6 +1953,8 @@
     }
    ],
    "source": [
+    "# define a small area to crop around\n",
+    "# crop to 400 meters squared around the sampling point\n",
     "minx, miny, maxx, maxy = get_bounding_box(\n",
     "    example_row.latitude, example_row.longitude, meter_buffer=100\n",
     ")\n",
@@ -1991,11 +2031,14 @@
     }
    ],
    "source": [
-    "imagee_color_averages = feature_image_array.mean(axis=(1, 2)).tolist()\n",
+    "# take the average over the second and third dimensions\n",
+    "image_color_averages = feature_image_array.mean(axis=(1, 2)).tolist()\n",
     "\n",
+    "# also take the median\n",
     "image_color_medians = np.median(feature_image_array, axis=(1, 2)).tolist()\n",
     "\n",
-    "image_features = imagee_color_averages + image_color_medians\n",
+    "# concatenate the two lists\n",
+    "image_features = image_color_averages + image_color_medians\n",
     "image_features"
    ]
   },
@@ -2014,45 +2057,56 @@
    "outputs": [],
    "source": [
     "def select_best_item(items, date, latitude, longitude):\n",
+    "    \"\"\"\n",
+    "    Select the best satellite item given a sample's date, latitude, and longitude.\n",
+    "    If any Sentinel-2 imagery is available, returns the closest sentinel-2 image by\n",
+    "    time. Otherwise, returns the closest Landsat imagery.\n",
+    "\n",
+    "    Returns a tuple of (STAC item, item platform name, item date)\n",
+    "    \"\"\"\n",
     "    # get item details\n",
     "    item_details = pd.DataFrame(\n",
     "        [\n",
     "            {\n",
-    "                'datetime': item.datetime.strftime(\"%Y-%m-%d\"),\n",
-    "                'platform': item.properties['platform'],\n",
-    "                'min_long': item.bbox[0],\n",
-    "                'max_long': item.bbox[2],\n",
-    "                'min_lat': item.bbox[1],\n",
-    "                'max_lat': item.bbox[3],\n",
-    "                'item_obj': item,\n",
+    "                \"datetime\": item.datetime.strftime(\"%Y-%m-%d\"),\n",
+    "                \"platform\": item.properties[\"platform\"],\n",
+    "                \"min_long\": item.bbox[0],\n",
+    "                \"max_long\": item.bbox[2],\n",
+    "                \"min_lat\": item.bbox[1],\n",
+    "                \"max_lat\": item.bbox[3],\n",
+    "                \"item_obj\": item,\n",
     "            }\n",
     "            for item in items\n",
     "        ]\n",
     "    )\n",
-    "    \n",
-    "    # filter to items that contain the point location, return None if none contain the point\n",
-    "    item_details['contains_sample_point'] = (\n",
+    "\n",
+    "    # filter to items that contain the point location, or return None if none contain the point\n",
+    "    item_details[\"contains_sample_point\"] = (\n",
     "        (item_details.min_lat < latitude)\n",
     "        & (item_details.max_lat > latitude)\n",
     "        & (item_details.min_long < longitude)\n",
     "        & (item_details.max_long > longitude)\n",
     "    )\n",
-    "    item_details = item_details[item_details['contains_sample_point'] == True]\n",
+    "    item_details = item_details[item_details[\"contains_sample_point\"] == True]\n",
     "    if len(item_details) == 0:\n",
     "        return (np.nan, np.nan, np.nan)\n",
-    "    \n",
-    "    # add time difference between each item and the sample date\n",
-    "    item_details['time_diff'] = pd.to_datetime(date) - pd.to_datetime(item_details.datetime)\n",
-    "    \n",
-    "    # if we have sentinel-2, filter to sentinel-2 only\n",
-    "    item_details['sentinel'] = item_details.platform.str.lower().str.contains('sentinel')\n",
-    "    if item_details['sentinel'].any():\n",
-    "        item_details = item_details[item_details['sentinel'] == True]\n",
-    "        \n",
+    "\n",
+    "    # add time difference between each item and the sample\n",
+    "    item_details[\"time_diff\"] = pd.to_datetime(date) - pd.to_datetime(\n",
+    "        item_details[\"datetime\"]\n",
+    "    )\n",
+    "\n",
+    "    # if we have sentinel-2, filter to sentinel-2 images only\n",
+    "    item_details[\"sentinel\"] = item_details.platform.str.lower().str.contains(\n",
+    "        \"sentinel\"\n",
+    "    )\n",
+    "    if item_details[\"sentinel\"].any():\n",
+    "        item_details = item_details[item_details[\"sentinel\"] == True]\n",
+    "\n",
     "    # return the closest imagery by time\n",
-    "    best_item = item_details.sort_values(by='time_diff', ascending=True).iloc[0]\n",
-    "    \n",
-    "    return (best_item.item_obj, best_item.platform, best_item.datetime)"
+    "    best_item = item_details.sort_values(by=\"time_diff\", ascending=True).iloc[0]\n",
+    "\n",
+    "    return (best_item[\"item_obj\"], best_item[\"platform\"], best_item[\"datetime\"])"
    ]
   },
   {
@@ -2062,9 +2116,15 @@
    "outputs": [],
    "source": [
     "def image_to_features(image_array):\n",
+    "    \"\"\"\n",
+    "    Convert an image array of the form (color band, height, width) to a\n",
+    "    1-dimensional list of features. Returns a list where the first three\n",
+    "    values are the averages of each color band, and the second three\n",
+    "    values are the medians of each color band.\n",
+    "    \"\"\"\n",
     "    averages = image_array.mean(axis=(1, 2)).tolist()\n",
     "    medians = np.median(image_array, axis=(1, 2)).tolist()\n",
-    "    \n",
+    "\n",
     "    return averages + medians"
    ]
   },
@@ -2074,10 +2134,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BENCHMARK_DATA_DIR = DATA_DIR / 'benchmark'\n",
+    "BENCHMARK_DATA_DIR = DATA_DIR.parents[1] / \"benchmark\"\n",
     "\n",
-    "IMAGE_ARRAY_DIR = BENCHMARK_DATA_DIR / 'image_arrays'\n",
-    "IMAGE_ARRAY_DIR.mkdir(parents=True, exist_ok=True)"
+    "# save image arrays in case we want to generate more features\n",
+    "IMAGE_ARRAY_DIR = BENCHMARK_DATA_DIR / \"image_arrays\"\n",
+    "IMAGE_ARRAY_DIR.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -2086,9 +2147,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_subset = metadata[metadata['split'] == 'train'].sample(n=2500, random_state=2)\n",
+    "# take a random subset of the training data for the benchmark\n",
+    "train_subset = metadata[metadata[\"split\"] == \"train\"].sample(n=2500, random_state=2)\n",
     "\n",
-    "metadata_subset = pd.concat([train_subset, metadata[metadata['split'] == 'test']])\n",
+    "# combine train subset with all test data\n",
+    "metadata_subset = pd.concat([train_subset, metadata[metadata[\"split\"] == \"test\"]])\n",
     "metadata_subset.split.value_counts(dropna=False)"
    ]
   },
@@ -2097,7 +2160,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save outputs in dictionaries\n",
+    "selected_items = {}\n",
+    "features_dict = {}\n",
+    "errored_ids = []"
+   ]
   },
   {
    "cell_type": "code",
