--- a/benchmark-blogpost.ipynb
+++ b/benchmark-blogpost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[23570 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "12681"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "Name: split, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x25addddd940>"
+       "<matplotlib.legend.Legend at 0x25addde9460>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "train 2013-01-04 2021-12-14"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "<AxesSubplot: title={'center': 'Distribution of years in the data'}, xlabel='Year', ylabel='Number of samples'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "Name: season, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "[17060 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "(17060, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "[17060 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "Text(0.5, 1.0, 'Train labels severity level counts')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "Name: density, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "91"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
        "[6510 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
        "(6510, 2)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
        "Name: 5461, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
        " 42.43019710235757]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
        "'2021-09-12/2021-09-27'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        "46"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
        "5   [-113.18385774, 40.78803499, -110.15150674, 42...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
        "34  <Item id=S2A_MSIL2A_20210914T180951_R084_T12TW...                   True  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
        "Name: 8, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1680,6 +1680,48 @@
     "img = Image(url=item.assets['rendered_preview'].href, width=500)\n",
     "\n",
     "display(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "a bytes-like object is required, not 'Image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[155], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mimage.png\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m png:\n\u001b[1;32m----> 2\u001b[0m     png\u001b[39m.\u001b[39;49mwrite(img)\n",
+      "\u001b[1;31mTypeError\u001b[0m: a bytes-like object is required, not 'Image'"
+     ]
+    }
+   ],
+   "source": [
+    "with open('image.png', 'wb') as png:\n",
+    "    png.write(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://planetarycomputer.microsoft.com/api/data/v1/item/preview.png?collection=sentinel-2-l2a&item=S2A_MSIL2A_20210924T181101_R084_T12TWM_20210925T141709&assets=visual&asset_bidx=visual%7C1%2C2%2C3&nodata=0&format=png'"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item.assets[\"rendered_preview\"].href"
    ]
   },
   {
@@ -3901,128 +3943,6 @@
    "outputs": [],
    "source": [
     "test_preds_pth = BENCHMARK_DATA_DIR / \"test_preds.npy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('data/benchmark/x_test.npy')"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_test_pth.relative_to(Path.cwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('data/benchmark/test_preds.npy')"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_preds_pth.relative_to(Path.cwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile test_gbm_model.py\n",
-    "import lightgbm as lgb\n",
-    "\n",
-    "import joblib\n",
-    "from loguru import logger\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import typer\n",
-    "\n",
-    "DATA_DIR = Path.cwd() / \"data/benchmark\"\n",
-    "\n",
-    "\n",
-    "def main(\n",
-    "    model_weights_path=DATA_DIR / \"lgb_classifier.txt\",\n",
-    "    features_path=DATA_DIR / \"x_val.npy\",\n",
-    "    preds_save_path=DATA_DIR / \"val_preds.npy\",\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Generate predictions with a LightGBM model using weights saved at model_weights_path\n",
-    "    and features saved at features_path. Save out predictions to preds_save_path.\n",
-    "    \"\"\"\n",
-    "    # load model weights\n",
-    "    lgb_model = joblib.load(model_weights_path)\n",
-    "    logger.info(f\"Loaded model {lgb_model} from {model_weights_path}\")\n",
-    "\n",
-    "    # load the features\n",
-    "    with open(features_path, \"rb\") as f:\n",
-    "        X_val = np.load(f)\n",
-    "    logger.info(f\"Loaded features of shape {X_val.shape} from {features_path}\")\n",
-    "\n",
-    "    # generate predictions\n",
-    "    preds = lgb_model.predict(X_val)\n",
-    "\n",
-    "    # save out predictions\n",
-    "    with open(preds_save_path, \"wb\") as f:\n",
-    "        np.save(f, preds)\n",
-    "    logger.success(f\"Predictions saved to {preds_save_path}\")\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    typer.run(main)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Usage: predict_gbm_model.py [OPTIONS]\n",
-      "\n",
-      "  Generate predictions with a LightGBM model using weights saved at\n",
-      "  model_weights_path and features saved at features_path. Save out predictions\n",
-      "  to preds_save_path.\n",
-      "\n",
-      "Options:\n",
-      "  --model-weights-path TEXT  [default: c:\\Users\\Keenan\n",
-      "                             Samway\\Documents\\GitHub\\Algal-Bloom-\n",
-      "                             Detection\\data\\benchmark\\lgb_classifier.txt]\n",
-      "  --features-path TEXT       [default: c:\\Users\\Keenan\n",
-      "                             Samway\\Documents\\GitHub\\Algal-Bloom-\n",
-      "                             Detection\\data\\benchmark\\x_val.npy]\n",
-      "  --preds-save-path TEXT     [default: c:\\Users\\Keenan\n",
-      "                             Samway\\Documents\\GitHub\\Algal-Bloom-\n",
-      "                             Detection\\data\\benchmark\\val_preds.npy]\n",
-      "  --help                     Show this message and exit.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python predict_gbm_model.py --help"
    ]
   },
   {
